--- a/setup.cfg
+++ b/setup.cfg
@@ -18,6 +18,12 @@ classifiers =
 package_dir =
     = src
 packages = find:
+install_requires =
+    numpy
+    scipy
+    pandas
+    matplotlib
+    sklearn
 python_requires = >=3.10
 
 [options.packages.find]
